Disable roots huts

--- a/.minecraft/config/mysticalworld.cfg
+++ b/.minecraft/config/mysticalworld.cfg
@@ -12,11 +12,10 @@ general {
 
     # List of dimensions the barrow structure should spawn in
     I:BarrowSpawnWhitelist <
-        0
      >
 
     # Grant the Patchouli-based Guide Book when first joining the server
-    B:GiveBook=true
+    B:GiveBook=false
 
     # Mininmum distance between Hut structures. Set to -1 to disable.
     # Min: -1
@@ -29,7 +28,6 @@ general {
 
     # List of dimensions the hut structure should spawn in
     I:HutSpawnWhitelist <
-        0
      >
 
     # Inject some items from Mystical World into dungeon & other loot chests
