No loot injection from mystical world nor roots

--- a/.minecraft/config/roots/general.cfg
+++ b/.minecraft/config/roots/general.cfg
@@ -20,7 +20,7 @@ main {
     I:GroveStoneChance=2
 
     # Inject some items from Roots into dungeon & other loot chests
-    B:InjectLoot=true
+    B:InjectLoot=false
 
     # Maximum nubmer of pulls for injected loot
     I:InjectMaximum=1
