Configure BetterCaves+BetterMineshafts

--- a/.minecraft/config/bettercaves-1_12_2.cfg
+++ b/.minecraft/config/bettercaves-1_12_2.cfg
@@ -9,7 +9,6 @@ general {
     # List of ID's of dimensions that will have Better Caves. Ignored if Global Whitelisting is enabled.
     I:"Whitelisted Dimension IDs" <
         0
-        10
      >
 
     ##########################################################################################################
@@ -80,7 +79,7 @@ general {
                 # Default: 80
                 # Min: 0
                 # Max: 255
-                I:"Type 1 Cave Maximum Altitude"=80
+                I:"Type 1 Cave Maximum Altitude"=128
 
                 # The minimum y-coordinate at which type 1 caves can generate.
                 # Default: 1
@@ -126,7 +125,7 @@ general {
                 # Default: 80
                 # Min: 0
                 # Max: 255
-                I:"Type 2 Cave Maximum Altitude"=80
+                I:"Type 2 Cave Maximum Altitude"=128
 
                 # The minimum y-coordinate at which type 2 caves can generate.
                 # Default: 1
@@ -170,13 +169,13 @@ general {
                 # Default: 128
                 # Min: 0
                 # Max: 255
-                I:"Surface Cave Maximum Altitude"=128
+                I:"Surface Cave Maximum Altitude"=180
 
                 # The minimum y-coordinate at which surface caves can generate.
                 # Default: 40
                 # Min: 0
                 # Max: 255
-                I:"Surface Cave Minimum Altitude"=40
+                I:"Surface Cave Minimum Altitude"=75
             }
 
             ##########################################################################################################
@@ -196,13 +195,13 @@ general {
                 # Default: 128
                 # Min: 0
                 # Max: 255
-                I:"Vanilla Cave Maximum Altitude"=128
+                I:"Vanilla Cave Maximum Altitude"=180
 
                 # The minimum y-coordinate at which vanilla caves can generate.
                 # Default: 8
                 # Min: 0
                 # Max: 255
-                I:"Vanilla Cave Minimum Altitude"=8
+                I:"Vanilla Cave Minimum Altitude"=75
 
                 # Determines how frequently vanilla caves spawn. 0 = will not spawn at all.
                 # Default: 0
@@ -272,7 +271,7 @@ general {
                 # Default: 35
                 # Min: 0
                 # Max: 255
-                I:"Liquid Cavern Maximum Altitude"=35
+                I:"Liquid Cavern Maximum Altitude"=65
 
                 # The minimum y-coordinate at which Liquid Caverns can generate.
                 # Default: 1
@@ -312,7 +311,7 @@ general {
                 # Default: 35
                 # Min: 0
                 # Max: 255
-                I:"Floored Cavern Maximum Altitude"=35
+                I:"Floored Cavern Maximum Altitude"=42
 
                 # The minimum y-coordinate at which Floored Caverns can generate.
                 # Default: 1
@@ -401,7 +400,7 @@ general {
             # Default: 10
             # Min: 0
             # Max: 255
-            I:"Liquid Altitude"=10
+            I:"Liquid Altitude"=44
 
             # Ignores surface detection for closing off caves and caverns, forcing them to spawn
             #     up until their max height. Useful for Nether-like dimensions with no real "surface".
@@ -416,7 +415,7 @@ general {
             # The block used for water generation in water caves/caverns at and below the Liquid Altitude.
             #     Defaults to regular water if an invalid block is given.
             # Default: minecraft:water
-            S:"Water Block"=minecraft:water
+            S:"Water Block"=tfc:fluid/fresh_water
         }
 
     }
