--- a/.minecraft/config/cuisine.cfg
+++ b/.minecraft/config/cuisine.cfg
@@ -60,7 +60,7 @@ general {
     B:AutoRecipeUnlocking=false
 
     # Allow axes to chop things on chopping board. Provided for mod pack creators.
-    B:AxeChopping=true
+    B:AxeChopping=false
 
     # Min: 1
     # Max: 64
