Disabled majority of Thaumcraft's worldgen
- Amber Ore
- Cinnabar Ore
- Crystals
- Quartz

- Magical Forests won't spawn. atm.

--- a/.minecraft/config/thaumcraft_world.cfg
+++ b/.minecraft/config/thaumcraft_world.cfg
@@ -15,16 +15,16 @@ general {
     # addon mods you probably want to increase this weight quite a bit
     # Min: 0
     # Max: 100
-    I:biomeMagicalForestWeight=5
+    I:biomeMagicalForestWeight=0
 
     # Outer lands dimension id
     I:dimensionOuterId=-42
-    B:generateAmber=true
+    B:generateAmber=false
     B:generateAura=true
-    B:generateCinnabar=true
-    B:generateCrystals=true
-    B:generateMagicForest=true
-    B:generateQuartz=true
+    B:generateCinnabar=false
+    B:generateCrystals=false
+    B:generateMagicForest=false
+    B:generateQuartz=false
     B:generateStructure=true
     B:generateTrees=true
 
