Disable all H&C worldgen + disable cave modifications
- BetterCaves handles this

--- a/.minecraft/config/defeatedcrow/climate/core.cfg
+++ b/.minecraft/config/defeatedcrow/climate/core.cfg
@@ -259,7 +259,7 @@ setting {
 
 "world setting" {
     # Disable generation the lava lakes on ground of forest biomes.
-    B:"Disable Forest Lava Lake"=true
+    B:"Disable Forest Lava Lake"=false
 
     # Set the number of days of fine weather required for drought.
     I:"Drought Frequency"=60
@@ -271,7 +271,7 @@ setting {
     B:"Enable Ice Effect"=true
 
     # Enable modification the underground lakes.
-    B:"Enable Modificated Lake"=true
+    B:"Enable Modificated Lake"=false
 
     # Enable to moisture farmland in WET humidity.
     B:"Enable Moisture Farmland"=true
@@ -299,7 +299,7 @@ setting {
     B:"Enable Vanilla Temperature Effect"=true
 
     # Enable generating water blocks instead of lava blocks in the deep caves.
-    B:"Enable Water Caves"=true
+    B:"Enable Water Caves"=false
 
     # Enable temperature change by the weather.
     B:"Enable Weather Effect"=true
