Disable AcademyCraft worldgen
- Imag Phase Liquid will be produced through a cryogenic process #343

--- a/.minecraft/config/academy.cfg
+++ b/.minecraft/config/academy.cfg
@@ -46,13 +46,13 @@ generic {
     B:destroyBlocks=true
 
     # Whether the ores will be generated in overworld. [default: true]
-    B:genOres=true
+    B:genOres=false
 
     # Whether phase liquid will be generated in overworld. [default: true]
-    B:genPhaseLiquid=true
+    B:genPhaseLiquid=false
 
     # Whether the player will be given MisakaCloud Terminal on first spawn. [default: true]
-    B:giveCloudTerminal=true
+    B:giveCloudTerminal=false
 
     # Show heads or tails after throwing a coin. [default: false]
     B:headsOrTails=false
