--- a/.minecraft/config/Bewitchment.cfg
+++ b/.minecraft/config/Bewitchment.cfg
@@ -567,7 +567,7 @@ general {
     ##########################################################################################################
 
     memes {
-        # Decides whether or not the cats and dogs will be enabled.
+        # Decides whether or not the cats and dogs fortune will be enabled.
         B:enableCatsAndDogsFortune=false
 
         # it is wednesday my dudes
